# inpaint

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: test.yaml
.woodpecker/: test.yaml
examples/python/: main.py  pyproject.toml
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
python/inpaint/: __init__.py
src/: error.rs  lib.rs  prelude.rs  telea.rs
test/python/: test_images.py  test_interface.py
